[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Animations/damage_anim.tres" type="Animation" id=1]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Slime.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.63134

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "slime_anim"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30 ]
}

[sub_resource type="Animation" id=6]
resource_name = "slime_start_awake_anim"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=4]
resource_name = "slime_wakeup_anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 45.0999

[node name="World_Slime" instance=ExtResource( 2 )]
z_index = 0
collision_layer = 0
collision_mask = 9
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.1, 0.1 )
frame = 27

[node name="Body_Shape" parent="." index="1"]
position = Vector2( -0.5, 2.5 )
disabled = true

[node name="Area_Shape" parent="Area" index="0"]
position = Vector2( -0.5, 4.5 )
shape = SubResource( 1 )

[node name="Jump_Timer" type="Timer" parent="." index="4"]

[node name="Enable_Timer" type="Timer" parent="." index="5"]

[node name="Enemy_Animation" parent="." index="6"]
anims/RESET = SubResource( 2 )
anims/damage_anim = ExtResource( 1 )
anims/slime_anim = SubResource( 3 )
anims/slime_start_awake_anim = SubResource( 6 )
anims/slime_wakeup_anim = SubResource( 4 )

[node name="DetectArea" type="Area2D" parent="." index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea" index="0"]
shape = SubResource( 5 )

[connection signal="timeout" from="Jump_Timer" to="." method="_on_Jump_Timer_timeout"]
[connection signal="timeout" from="Enable_Timer" to="." method="_on_Enable_Timer_timeout"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
